# bearing-ball

./: Cargo.toml  README.md  balls.toml  config.toml  flake.nix  rustfmt.toml
src/: ball.rs  components.rs  config.rs  game_state.rs  main.rs  net.rs  player.rs  prelude.rs  resources.rs  score.rs  setup.rs  sound.rs  systems.rs  wall.rs
src/systems/: fixed_update.rs  update.rs
