[package]
name = "bearing-ball"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["wayland"] }
iyes_perf_ui = "0.5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
sensible = "0.1.0"
